--- a/web_dynamic/static/styles/6-filters.css
+++ b/web_dynamic/static/styles/6-filters.css
@@ -37,7 +37,7 @@ button:hover {
 }
 .filters h4 {
     margin-left: 15%;
-    margin-top: 0;
+    margin-top: 1%;
     font-weight: 400;
     font-size: 14px;
 }
