--- a/web_dynamic/static/styles/3-header.css
+++ b/web_dynamic/static/styles/3-header.css
@@ -10,7 +10,7 @@ header .logo {
     height: 100%;
 }
 
-header #api_status {
+header .api_status {
     position: absolute;
     right: 30px;
     transform: translateY(-140%);
